--- a/public/css/new-age.css
+++ b/public/css/new-age.css
@@ -153,11 +153,11 @@ header {
     width: 100%;
     min-height: auto;
     overflow-y: hidden;*/
-  background: url("../img/Banner-Edvard-small.jpg") 40% 0 fixed, #222;
+  background: url("../images/banner-1.jpg") 40% 0 fixed, #222;
   /* fallback for old browsers */
-  background: url("../img/Banner-Edvard-small.jpg") 40% 0 fixed, -webkit-linear-gradient(to left, #222, #a5a5a5);
+  background: url("../images/banner-1.jpg") 40% 0 fixed, -webkit-linear-gradient(to left, #222, #a5a5a5);
   /* Chrome 10-25, Safari 5.1-6 */
-  background: url("../img/Banner-Edvard-small.jpg") 40% 0 fixed, linear-gradient(to top, #222, #a5a5a5);
+  background: url("../images/banner-1.jpg") 40% 0 fixed, linear-gradient(to top, #222, #a5a5a5);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   /*background-repeat: no-repeat;*/
   min-height: 500px;
@@ -176,8 +176,8 @@ header .header-content .header-content-inner {
 header .header-content .header-content-inner h1 {
   margin-top: 0;
   margin-bottom: 30px;
-  font-family: Hillgates;
-  font-size: 110px;
+  font-family: Lato;
+  font-size: 20px !important;
   padding: 44px 0 0;
 }
 header .header-content .header-content-inner p {
@@ -241,7 +241,7 @@ section h2 {
   font-size: 50px;
 }
 section.section-silver {
-  background: #222;
+  background: #585858;
   color: #fff;
 }
 section.download {
