--- a/public/less/new-age.less
+++ b/public/less/new-age.less
@@ -146,9 +146,9 @@ header {
     overflow-y: hidden;*/
 
 
-    background: url("../img/Banner-Edvard-small.jpg") 40% 0  fixed, @theme-secondary ; /* fallback for old browsers */
-    background: url("../img/Banner-Edvard-small.jpg") 40% 0  fixed, -webkit-linear-gradient(to left, @theme-secondary , @theme-tertiary); /* Chrome 10-25, Safari 5.1-6 */
-    background: url("../img/Banner-Edvard-small.jpg") 40% 0  fixed, linear-gradient(to top, @theme-secondary , @theme-tertiary); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: url("../images/banner-1.jpg") 40% 0  fixed, @theme-secondary ; /* fallback for old browsers */
+    background: url("../images/banner-1.jpg") 40% 0  fixed, -webkit-linear-gradient(to left, @theme-secondary , @theme-tertiary); /* Chrome 10-25, Safari 5.1-6 */
+    background: url("../images/banner-1.jpg") 40% 0  fixed, linear-gradient(to top, @theme-secondary , @theme-tertiary); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     //background-position: center top;
     //background-size: 140% auto;
     /*background-repeat: no-repeat;*/
@@ -170,8 +170,8 @@ header {
             h1 {
                 margin-top: 0;
                 margin-bottom: 30px;
-                font-family: Hillgates;
-                font-size: 110px;
+                font-family: Lato;
+                font-size: 20px !important;
                 padding: 44px 0 0;
             }
             p {
