--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,29 +1,41 @@
-<!-- Default home page -->
+<script src="https://unpkg.com/blip-chat-web" type="text/javascript"></script>
+<script>
+    (function () {
+        window.onload = function () {
+            new BlipWebSDK.ChatBuilder()
+                .withApiKey('792a7bbe-d04a-4f06-ab4e-52ee683d68c5')
+                .build();
+        }
+    })();
+</script>
 
-    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+    <nav id="mainNav" class="navbar navbar-fixed-top dark">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only"></span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><img src="img/mini-logo.png" alt=""></a>
+                <a class="navbar-brand page-scroll" href="#page-top"><img style="max-width:150px" src="images/logo.png" alt=""></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1 ">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#page-top">Home</a>
+                        <a class="page-scroll" href="#page-top" style="color:#fff">Home</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#inscricao">Inscrição</a>
+                        <a class="page-scroll" href="#inscricao" style="color:#fff">Como Funciona</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#blog">Blog</a>
+                        <a class="page-scroll" href="#blog" style="color:#fff">Arenas</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contato">Contato</a>
+                        <a class="page-scroll" href="#blog" style="color:#fff">Agendar</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contato" style="color:#fff">Contato</a>
                     </li>
                 </ul>
             </div>
@@ -33,14 +45,14 @@
     </nav>
 
     <header >
-        <div class="container">
+        <div class="container ">
             <div class="row">
                 <div class="col-sm-7">
                     <div class="header-content">
                         <div class="header-content-inner">
-                            <h1>LOREM IPSUM</h1>
-                            <p class="text-muted">Já imaginou pintar com os mesmos pinceis de 100 anos de LOREM IPSUM?</p>
-                            <a href="#blog" class="btn btn-outline btn-xl page-scroll">Baixar e-books</a>
+                            <h1 style="font-size:60px !important; color: #fff">Eperiência Transformadora</h1>
+                            <p class="text-muted" style="color:#fff;">Onde o real e o virtual se encontram</p>
+                            <a href="#blog" class="btn btn-outline btn-xl page-scroll" style="color:#fff">Conheça mais</a>
                         </div>
                     </div>
                 </div>
@@ -68,9 +80,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-left">
-                    <div class="section-heading">
-                        <h2>MATÉRIAS</h2>
-                        <h2>EM DESTAQUE</h2>
+                    <div class="section-heading text-center">
+                        <h2>COMO</h2>
+                        <h2>FUNCIONA</h2>
                         <!--<p class="text-muted">O que faz você se destacar no mercado?</p>-->
                         <hr>
                     </div>
@@ -78,46 +90,33 @@
             </div>
             <div class="row">
 
-                    <div class="container-fluid">
-                        <div class="row">
-                            <!--
-                            <div class="col-md-6">
-                                <h4> The Future of Enterprise UX<br />
-                                    <small>Você sabe o que é Consumer-Grade User Experience?</small>
-                                </h4>
-                                <a href="../ebook/the-future-enterprise-UX" alt="Blog Design"><img src="img/ux.jpg" class="fade" style="max-height:260px; width: 520px;" alt="Design - LOREM IPSUM"></a>
-                            </div>
+                    <div class="container-fluid topmargin">
+                        <div class="row" style="padding-top:50px">
 
-                            <div class="col-md-6" >
-                                <a href="../ebook/enterprise-UX-industry-report"  class="white-link"alt="Blog Design">
-                                    <h4>Qual o futuro do UX Design?<br />
-                                    <small>Enterprise UX Industry Report 2017–2018</small>
-                                    </h4>
-                                    <img src="img/user-experience.jpg" class="fade" style="max-height:260px; width: 520px;" alt="Design - LOREM IPSUM">
-                                </a>
-                            </div>
-                            -->
                             <div class="col-md-4">
-                                <a href="../ebook/o-futuro-do-design-no-brasil" class="white-link" alt="Blog Design">
-                                    <h4>O Futuro do Design no Brasil<br />
-                                    <small>Você está pronto para as mudanças no mercado?</small>
+                                <img style="max-width:200px; border-radius: 50%; margin:0 auto;" src="images/img-1.jpg" alt="">
+                                <a href="#" alt="Blog Design">
+                                    <h4>ARENAS<br />
+                                    <small>Ambientes para você ir onde quiser, proporcionando total imersão e diversão!</small>
                                     </h4>
 
                                 </a>
                             </div>
                             <div class="col-md-4">
-                                <a href="../ebook/the-building-blocks-of-visual-hierarchy/" class="white-link" alt="Blog Design">
-                                    <h4>The Building Blocks of Visual Hierarchy<br /><small>Você conhece o conceito de hirarquia visual e a sua importancia?</small>
+                                <img style="max-width:200px; border-radius: 50%; margin:0 auto;" src="images/img-2.jpg" alt="">
+                                <a href="#" alt="Blog Design">
+                                    <h4>JOGOS MULTIPLAYER<br />
+                                    <small>Sem fronteiras preparado para você se conectar com o mundo</small>
                                     </h4>
-
                                 </a>
                             </div>
 
                             <div class="col-md-4">
-                                <a href="../ebook/the-building-blocks-of-visual-hierarchy/" class="white-link" alt="Blog Design">
-                                    <h4>The Building Blocks of Visual Hierarchy<br /><small>Você conhece o conceito de hirarquia visual e a sua importancia?</small>
+                                <img style="max-width:200px; border-radius: 50%; margin:0 auto;" src="images/img-3.jpg" alt="">
+                                <a href="#" alt="Blog Design">
+                                    <h4>REALIDADE VIRTUAL<br />
+                                    <small>Vivêncie uma nova experiência!</small>
                                     </h4>
-
                                 </a>
                             </div>
                         </div>
@@ -125,205 +124,22 @@
             </div>
         </div>
     </section>
-<!--
-    <section id="destaque" class="features">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-md-4">
-                                <div class="feature-item">
-                                    <i class="icon-screen-smartphone text-primary"></i>
-                                    <h3>Inovação</h3>
-                                    <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="feature-item">
-                                    <i class="icon-camera text-primary"></i>
-                                    <h3>Flexibilidade</h3>
-                                    <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="feature-item">
-                                    <i class="icon-present text-primary"></i>
-                                    <h3>Lorem Ipsum</h3>
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-4">
-                                <div class="feature-item">
-                                    <i class="icon-lock-open text-primary"></i>
-                                    <h3>Lorem Ipsum</h3>
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="feature-item">
-                                    <i class="icon-lock-open text-primary"></i>
-                                    <h3>Lorem Ipsum</h3>
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="feature-item">
-                                    <i class="icon-lock-open text-primary"></i>
-                                    <h3>Lorem Ipsum</h3>
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
--->
+
     <section id="inscricao" class="content download bgcolor-1 text-center">
         <div class="container">
+            <div class="row">
+                <h1 class="section-heading">Compre agora!</h1>
 
-          <!-- INICIO FORMULARIO BOTAO PAGSEGURO -->
+                 <!-- INICIO FORMULARIO BOTAO PAGSEGURO -->
           <form action="https://pagseguro.uol.com.br/checkout/v2/payment.html" method="post" onsubmit="PagSeguroLightbox(this); return false;">
           <!-- NÃO EDITE OS COMANDOS DAS LINHAS ABAIXO -->
-          <input type="hidden" name="code" value="F0CE94CE0C0CFA24446ACF85509BF87C" />
+          <input type="hidden" name="code" value="E209A9B53C3C832224A9DFB361016476" />
           <input type="hidden" name="iot" value="button" />
           <input type="image" src="https://stc.pagseguro.uol.com.br/public/img/botoes/pagamentos/209x48-comprar-assina.gif" name="submit" alt="Pague com PagSeguro - é rápido, grátis e seguro!" />
           </form>
           <script type="text/javascript" src="https://stc.pagseguro.uol.com.br/pagseguro/api/v2/checkout/pagseguro.lightbox.js"></script>
           <!-- FINAL FORMULARIO BOTAO PAGSEGURO -->
-
-            <div class="row">
-                <h1 class="section-heading">Assine nosso newsletter e receba materias incriveis!</h1>
             </div>
-            <form class="" id="my_form" action="cadastra.php" method="post">
-                <span class="input input--nao">
-                    <input class="input__field input__field--nao" name="nome" type="text" required id="input-1" />
-                    <label class="input__label input__label--nao" for="input-1">
-                        <span class="input__label-content input__label-content--nao">Nome</span>
-                    </label>
-                    <svg class="graphic graphic--nao" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
-                        <path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"/>
-                    </svg>
-                </span>
-                <span class="input input--nao">
-                    <input class="input__field input__field--nao" name="email" type="email" required  id="input-2" />
-                    <label class="input__label input__label--nao" for="input-2">
-                        <span class="input__label-content input__label-content--nao">E-mail</span>
-                    </label>
-                    <svg class="graphic graphic--nao" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
-                        <path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"/>
-                    </svg>
-                </span>
-                <span class="input input--nao">
-                    <label class="input__label input__label--nao" for="input-3">
-                        <span class="input__label-content input__label-content--nao">Possui interesse?</span>
-                    </label>
-                    <div class="form-group">
-                        <div class="radio">
-                            <label><input type="radio" name="interesse" value="Sim" required>Sim</label>
-                        </div>
-                        <div class="radio">
-                            <label><input type="radio" name="interesse" value="Nao">Não</label>
-                        </div>
-                    </div>
-                </span>
 
-            </div>
-            <a href="javascript:{}" onclick="document.getElementById('my_form').submit();" class="btn btn-outline btn-xl page-scroll">Inscrever</a>
-        </form>
     </section>
-
-    <script src="js/classie.js"></script>
-    <script>
-        (function() {
-            // trim polyfill : https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/Trim
-            if (!String.prototype.trim) {
-                (function() {
-                    // Make sure we trim BOM and NBSP
-                    var rtrim = /^[\s\uFEFF\xA0]+|[\s\uFEFF\xA0]+$/g;
-                    String.prototype.trim = function() {
-                        return this.replace(rtrim, '');
-                    };
-                })();
-            }
-
-            [].slice.call( document.querySelectorAll( 'input.input__field' ) ).forEach( function( inputEl ) {
-                // in case the input is already filled..
-                if( inputEl.value.trim() !== '' ) {
-                    classie.add( inputEl.parentNode, 'input--filled' );
-                }
-
-                // events:
-                inputEl.addEventListener( 'focus', onInputFocus );
-                inputEl.addEventListener( 'blur', onInputBlur );
-            } );
-
-            function onInputFocus( ev ) {
-                classie.add( ev.target.parentNode, 'input--filled' );
-            }
-
-            function onInputBlur( ev ) {
-                if( ev.target.value.trim() === '' ) {
-                    classie.remove( ev.target.parentNode, 'input--filled' );
-                }
-            }
-        })();
-    </script>
-
-    <section class="section-silver">
-        <div class="container">
-            <h1 style="padding-bottom:30px;">design life</h1>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/5BLnp_y_QvA?rel=0&amp;controls=0" frameborder="0" allowfullscreen></iframe>
-        </div>
-    </section>
-    <section class="section-white">
-      <div class="container">
-         <h1>hipster life</h1>
-
-
-        <? /*
-        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-          <!-- Indicators -->
-          <ol class="carousel-indicators">
-            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-          </ol>
-
-          <!-- Wrapper for slides -->
-          <div class="carousel-inner">
-            <div class="item active">
-              <img src="img/bg-cta-1.jpg" alt="..." style="max-height: 300px">
-              <div class="carousel-caption">
-                <h2>Lorem</h2>
-              </div>
-            </div>
-            <div class="item">
-              <img src="img/bg-cta-1.jpg" alt="..." style="max-height: 300px">
-              <div class="carousel-caption">
-                <h2>Lorem</h2>
-              </div>
-            </div>
-            <div class="item">
-              <img src="img/bg-cta-1.jpg" alt="..." style="max-height: 300px">
-              <div class="carousel-caption">
-                <h2>Lorem</h2>
-              </div>
-            </div>
-          </div>
-
-          <!-- Controls -->
-          <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-          </a>
-          <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-          </a>
-        </div>
-*/ ?>
-      </div>
-    </section>
+            
