--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -50,7 +50,7 @@
                 <div class="col-sm-7">
                     <div class="header-content">
                         <div class="header-content-inner">
-                            <h1 style="font-size:60px !important; color: #fff">Eperiência Transformadora</h1>
+                            <h1 style="font-size:60px !important; color: #fff">Experiência Transformadora</h1>
                             <p class="text-muted" style="color:#fff;">Onde o real e o virtual se encontram</p>
                             <a href="#blog" class="btn btn-outline btn-xl page-scroll" style="color:#fff">Conheça mais</a>
                         </div>
