--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,7 +16,7 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 
-    <title>LOREM IPSUM</title>
+    <title>ARKAVE ARENA</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
